--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 		<p>
 			Welcome to class, let's talk about HTML5
 		</p>
-		<a href="about.html">Go to page2</a>
-		<script src="main.js"></script>
+		<a href="about.html">Go to About</a>
+		<a href="syntax.html">Go to Syntax</a>		
+		<script src="main.js"></script>		
 	</body>
 </html>
