--- a/syntax.html
+++ b/syntax.html
@@ -6,10 +6,7 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<h1>HTML5 WEb Development</h1>
-		<p>
-			Welcome to Syntax
-		</p>
+		<h1>Syntax...</h1>
 		<script src="syntax.js"></script>		
 	</body>
 </html>
