--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 		<p>
 			Welcome to class, let's talk about HTML5
 		</p>
+		<button id="btn-shuffle">Shuffle</button>
+		<h1>Colors</h1>
+		
+  		<ul>
+  		</ul>
 		<a href="about.html">Go to About</a>
 		<a href="syntax.html">Go to Syntax</a>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 		<script src="main.js"></script>		
+		<script src="colors.js"></script>
 		<script src="objects.js"></script>			
 	</body>
 </html>
