--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   		</ul>
 		<a href="about.html">Go to About</a>
 		<a href="syntax.html">Go to Syntax</a>
+		<a href="game.html">Go to Syntax</a>		
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 		<script src="main.js"></script>		
 		<script src="colors.js"></script>
-		<script src="objects.js"></script>			
+		<script src="objects.js"></script>
 	</body>
 </html>
